--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <META name="keywords" content="Clerin,Clerin Tom, Devloper,Intern, Python, Data Science,Data Science and Analytics,ICT Academy">
 <STYLE type="text/css">
 
-body {margin-top: 0px;margin-left: 300px;}
+body {margin-top: 0px;margin:auto;max-width:650px;}
 
 #page_1 {position:relative; overflow: hidden;margin: 0px 0px 24px 0px;padding: 0px;border: none;width: 793px;}
 #page_1 #id1_1 {border:none;margin: 54px 0px 0px 90px;padding: 0px;border:none;width: 703px;overflow: hidden;}
